# pico_victron

./: CMakeLists.txt  README.md
http_content/: index.html  internet.html  overview.html  settings.html  style.css  test_server.py
include/: FreeRTOSConfig.h  VEBusConfig.h  access_point.h  json_util.h  lwipopts.h  measurements.h  persistent_storage.h  rs485_serial.h  settings.h  static_types.h  string_util.h  ve_bus.h  ve_bus_definition.h  webserver.h  wifi_storage.h
include/tcp_server/: tcp_server.h
src/: dnsserver.c  main.cpp  ve_bus.cpp
